--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
   <title>HTML London Trip</title>
 </head>
 <body>
+
+  <header>
+    <h1>Il mio Viaggio a Londra</h1>
+  </header>
+
+  <main>
+
+  </main>
+
+  <footer>
+    
+  </footer>
   
 </body>
 </html>
