--- a/index.html
+++ b/index.html
@@ -8,16 +8,24 @@
 </head>
 <body>
 
+  <!-- header della pagina -->
   <header>
     <h1>Il mio Viaggio a Londra</h1>
+    <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
+    <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
+    <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+    <hr>
+
   </header>
 
+  <!-- contenuto principale -->
   <main>
-
+    
   </main>
 
+  <!-- footer della pagina -->
   <footer>
-    
+
   </footer>
   
 </body>
