--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <!-- header della pagina -->
+  <!-- HEADER della pagina -->
   <header>
     <h1>Il mio Viaggio a Londra</h1>
     <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
@@ -18,9 +18,58 @@
 
   </header>
 
-  <!-- contenuto principale -->
+  <!-- CONTENTUTO principale -->
   <main>
-    
+    <h2>Le mie spese</h2>
+
+    <!-- inizio tabella -->
+    <table>
+
+      <!-- intestazione tabella -->
+      <thead>
+        <tr>
+          <th>Numero</th>
+          <th>Descrizione</th>
+          <th>Costo</th>
+        </tr>
+      </thead>
+      <!-- /intestazione tabella -->
+
+      <!-- corpo tabella -->
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Biglietto Aereo</td>
+          <td>120€</td>
+        </tr>
+
+        <tr>
+          <td>1</td>
+          <td>Biglietto Aereo</td>
+          <td>120€</td>
+        </tr>
+
+        <tr>
+          <td>1</td>
+          <td>Biglietto Aereo</td>
+          <td>120€</td>
+        </tr>
+      </tbody>
+      <!-- /corpo tabella -->
+
+      <!-- chiusura tabella -->
+      <tfoot>
+        <tr>
+          <td>Totale</td>
+          <td></td>
+          <td>360€</td>
+        </tr>
+      </tfoot>
+      <!-- /chiusura tabella -->
+
+    </table>
+    <!-- /fine tabella -->
+
   </main>
 
   <!-- footer della pagina -->
