--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <!-- CONTENTUTO principale -->
   <main>
+    <!-- Sezione delle spese -->
     <h2>Le mie spese</h2>
 
     <!-- inizio tabella -->
@@ -69,6 +70,20 @@
 
     </table>
     <!-- /fine tabella -->
+    <hr>
+
+    <!-- Cose da fare (Lista non ordinata) -->
+    <h3>Cose da fare</h3>
+
+    <ul>
+      <li>Visitare la Tower of London &cross;</li>
+      <li>Visitare greenwich &check;</li>
+      <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+      <li>Mangiare il tipico Fish and Chips &cross;</li>
+
+    </ul>
+    <hr>
+    <!-- /Cose da fare (Lista non ordinata) -->
 
   </main>
 
